--- a/notebooks/lecture_4_excel.ipynb
+++ b/notebooks/lecture_4_excel.ipynb
@@ -13,19 +13,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mv: rename /Users/yinterian/Downloads/Sample - Superstore.xls to /Users/yinterian/data/Sample - Superstore.xls: No such file or directory\n",
+      "mv: /Users/yinterian/data/Sample - Superstore.xls: No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
-    "#! mv ~/Downloads/Sample\\ -\\ Superstore.xls ~/data\n",
+    "! mv ~/Downloads/Sample\\ -\\ Superstore.xls ~/data\n",
     "! mv ~/data/Sample\\ -\\ Superstore.xls ~/data/SampleSuperstore.xls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -36,7 +45,7 @@
        "'/Users/yinterian/data'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -301,7 +310,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -373,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -396,7 +405,7 @@
        "        '72.94799999999998']], dtype='<U127')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -575,7 +584,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -612,7 +621,7 @@
        "Name: Customer Name, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -639,7 +648,7 @@
        "Name: Profit, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
