--- a/notebooks/lecture_4_sfpd-wordcloud.ipynb
+++ b/notebooks/lecture_4_sfpd-wordcloud.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -26,7 +26,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  269M    0  269M    0     0  3845k      0 --:--:--  0:01:11 --:--:-- 2768k    0  4068k      0 --:--:--  0:00:09 --:--:-- 4406k168M    0     0  4587k      0 --:--:--  0:00:37 --:--:-- 4756k    0  4614k      0 --:--:--  0:00:54 --:--:-- 3851k9M    0     0  4287k      0 --:--:--  0:00:59 --:--:--  707k\n"
+      "100  269M    0  269M    0     0  3381k      0 --:--:--  0:01:21 --:--:-- 1826k 0     0      0      0 --:--:-- --:--:-- --:--:--     0385k      0 --:--:--  0:00:06 --:--:-- 4953k  4470k      0 --:--:--  0:00:09 --:--:-- 4654k4k      0 --:--:--  0:00:10 --:--:-- 4755k    0     0  4670k      0 --:--:--  0:00:23 --:--:-- 4839k 0     0  4327k      0 --:--:--  0:00:36 --:--:-- 2481k     0  3886k      0 --:--:--  0:00:46 --:--:-- 2322kM    0     0  3859k      0 --:--:--  0:00:47 --:--:-- 2397k    0 --:--:--  0:00:50 --:--:-- 2706k --:--:--  0:00:51 --:--:-- 2808k245M    0     0  3677k      0 --:--:--  0:01:08 --:--:-- 2486k\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  769051 /tmp/SFPD.csv\n"
+      "  770014 /tmp/SFPD.csv\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So that's currently about 732k records."
+    "So that's currently about 770k records."
    ]
   },
   {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -948,7 +948,7 @@
        "Current Police Districts                                                                       7.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -996,7 +996,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -1015,19 +1015,19 @@
     {
      "data": {
       "text/plain": [
-       "[('Larceny Theft', 235126),\n",
-       " ('Other Miscellaneous', 52456),\n",
-       " ('Malicious Mischief', 52004),\n",
-       " ('Assault', 46529),\n",
-       " ('Non-Criminal', 45503),\n",
-       " ('Burglary', 42985),\n",
-       " ('Motor Vehicle Theft', 40608),\n",
-       " ('Recovered Vehicle', 30610),\n",
-       " ('Fraud', 24995),\n",
-       " ('Lost Property', 22343)]"
+       "[('Larceny Theft', 235443),\n",
+       " ('Other Miscellaneous', 52532),\n",
+       " ('Malicious Mischief', 52081),\n",
+       " ('Assault', 46570),\n",
+       " ('Non-Criminal', 45541),\n",
+       " ('Burglary', 43023),\n",
+       " ('Motor Vehicle Theft', 40663),\n",
+       " ('Recovered Vehicle', 30642),\n",
+       " ('Fraud', 25029),\n",
+       " ('Lost Property', 22376)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,23 +1044,34 @@
    "metadata": {
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "#counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Theft, From Locked Vehicle, >$950', 97293),\n",
-       " ('Malicious Mischief, Vandalism to Property', 25438),\n",
-       " ('Battery', 22755),\n",
-       " ('Vehicle, Recovered, Auto', 22447),\n",
-       " ('Lost Property', 22343),\n",
-       " ('Theft, Other Property, $50-$200', 21894),\n",
-       " ('Vehicle, Stolen, Auto', 21742),\n",
-       " ('Theft, Other Property, >$950', 18439),\n",
-       " ('Mental Health Detention', 16635),\n",
-       " ('Theft, From Unlocked Vehicle, >$950', 15234)]"
+       "[('Theft, From Locked Vehicle, >$950', 97421),\n",
+       " ('Malicious Mischief, Vandalism to Property', 25471),\n",
+       " ('Battery', 22777),\n",
+       " ('Vehicle, Recovered, Auto', 22474),\n",
+       " ('Lost Property', 22376),\n",
+       " ('Theft, Other Property, $50-$200', 21931),\n",
+       " ('Vehicle, Stolen, Auto', 21774),\n",
+       " ('Theft, Other Property, >$950', 18462),\n",
+       " ('Mental Health Detention', 16647),\n",
+       " ('Theft, From Unlocked Vehicle, >$950', 15296)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -1116,30 +1127,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "769050"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# delete Incident Categories with nan \n",
-    "categories = df_sfpd['Incident Category']\n",
-    "len(categories)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "tags": []
@@ -1148,7 +1135,7 @@
     {
      "data": {
       "text/plain": [
-       "768366"
+       "770013"
       ]
      },
      "execution_count": 9,
@@ -1157,7 +1144,8 @@
     }
    ],
    "source": [
-    "categories = categories.dropna()\n",
+    "# delete Incident Categories with nan \n",
+    "categories = df_sfpd['Incident Category']\n",
     "len(categories)"
    ]
   },
@@ -1171,46 +1159,69 @@
     {
      "data": {
       "text/plain": [
-       "Counter({'Recovered Vehicle': 30610,\n",
-       "         'Larceny Theft': 235126,\n",
-       "         'Assault': 46529,\n",
-       "         'Lost Property': 22343,\n",
+       "769328"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories = categories.dropna()\n",
+    "len(categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'Recovered Vehicle': 30642,\n",
+       "         'Larceny Theft': 235443,\n",
+       "         'Assault': 46570,\n",
+       "         'Lost Property': 22376,\n",
        "         'Drug Violation': 257,\n",
-       "         'Malicious Mischief': 52004,\n",
-       "         'Drug Offense': 18742,\n",
-       "         'Non-Criminal': 45503,\n",
-       "         'Fraud': 24995,\n",
-       "         'Warrant': 21778,\n",
-       "         'Other Offenses': 6568,\n",
-       "         'Robbery': 17233,\n",
-       "         'Case Closure': 3092,\n",
-       "         'Other Miscellaneous': 52456,\n",
-       "         'Stolen Property': 3749,\n",
-       "         'Offences Against The Family And Children': 10195,\n",
-       "         'Other': 6357,\n",
-       "         'Motor Vehicle Theft': 40608,\n",
-       "         'Traffic Collision': 1810,\n",
-       "         'Suspicious Occ': 15741,\n",
-       "         'Missing Person': 16568,\n",
-       "         'Disorderly Conduct': 12711,\n",
-       "         'Weapons Carrying Etc': 4271,\n",
+       "         'Malicious Mischief': 52081,\n",
+       "         'Drug Offense': 18779,\n",
+       "         'Non-Criminal': 45541,\n",
+       "         'Fraud': 25029,\n",
+       "         'Warrant': 21803,\n",
+       "         'Other Offenses': 6579,\n",
+       "         'Robbery': 17242,\n",
+       "         'Case Closure': 3095,\n",
+       "         'Other Miscellaneous': 52532,\n",
+       "         'Stolen Property': 3753,\n",
+       "         'Offences Against The Family And Children': 10207,\n",
+       "         'Other': 6362,\n",
+       "         'Motor Vehicle Theft': 40663,\n",
+       "         'Traffic Collision': 1811,\n",
+       "         'Suspicious Occ': 15755,\n",
+       "         'Missing Person': 16582,\n",
+       "         'Disorderly Conduct': 12735,\n",
+       "         'Weapons Carrying Etc': 4278,\n",
        "         'Rape': 188,\n",
-       "         'Burglary': 42985,\n",
-       "         'Fire Report': 1136,\n",
-       "         'Arson': 2183,\n",
+       "         'Burglary': 43023,\n",
+       "         'Fire Report': 1139,\n",
+       "         'Arson': 2184,\n",
        "         'Vandalism': 1701,\n",
        "         'Suicide': 345,\n",
-       "         'Traffic Violation Arrest': 7183,\n",
-       "         'Courtesy Report': 2298,\n",
-       "         'Forgery And Counterfeiting': 2648,\n",
-       "         'Weapons Offense': 5252,\n",
-       "         'Embezzlement': 967,\n",
+       "         'Traffic Violation Arrest': 7198,\n",
+       "         'Courtesy Report': 2300,\n",
+       "         'Forgery And Counterfeiting': 2655,\n",
+       "         'Weapons Offense': 5262,\n",
+       "         'Embezzlement': 969,\n",
        "         'Vehicle Misplaced': 324,\n",
-       "         'Miscellaneous Investigation': 8275,\n",
+       "         'Miscellaneous Investigation': 8286,\n",
        "         'Suspicious': 108,\n",
        "         'Prostitution': 824,\n",
-       "         'Vehicle Impounded': 524,\n",
-       "         'Sex Offense': 796,\n",
+       "         'Vehicle Impounded': 527,\n",
+       "         'Sex Offense': 797,\n",
        "         'Liquor Laws': 101,\n",
        "         'Human Trafficking, Commercial Sex Acts': 23,\n",
        "         'Gambling': 34,\n",
@@ -1222,7 +1233,7 @@
        "         'Human Trafficking (B), Involuntary Servitude': 1})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
