--- a/notebooks/lecture_4_xml_xpath.ipynb
+++ b/notebooks/lecture_4_xml_xpath.ipynb
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "<Element country at 0x110266f00>"
+       "<Element country at 0x107ceda40>"
       ]
      },
      "execution_count": 8,
@@ -196,9 +196,9 @@
     {
      "data": {
       "text/plain": [
-       "[<Element country at 0x110266f00>,\n",
-       " <Element country at 0x110227b80>,\n",
-       " <Element country at 0x11027b440>]"
+       "[<Element country at 0x107ceda40>,\n",
+       " <Element country at 0x107d89800>,\n",
+       " <Element country at 0x107cefc80>]"
       ]
      },
      "execution_count": 9,
@@ -252,7 +252,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Element data at 0x1102668c0>]"
+       "[<Element data at 0x107d47700>]"
       ]
      },
      "execution_count": 11,
@@ -277,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Element data at 0x1102668c0>]"
+       "[<Element data at 0x107d47700>]"
       ]
      },
      "execution_count": 12,
@@ -308,11 +308,11 @@
     {
      "data": {
       "text/plain": [
-       "[<Element neighbor at 0x106c8ee00>,\n",
-       " <Element neighbor at 0x1102669c0>,\n",
-       " <Element neighbor at 0x11023b740>,\n",
-       " <Element neighbor at 0x11027bf80>,\n",
-       " <Element neighbor at 0x110225080>]"
+       "[<Element neighbor at 0x107d88b00>,\n",
+       " <Element neighbor at 0x107db4500>,\n",
+       " <Element neighbor at 0x107db4580>,\n",
+       " <Element neighbor at 0x107db45c0>,\n",
+       " <Element neighbor at 0x107db4600>]"
       ]
      },
      "execution_count": 13,
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "08b53962",
    "metadata": {
     "tags": []
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "id": "1a5a06fd",
    "metadata": {
     "tags": []
@@ -400,13 +400,13 @@
    "source": [
     "# matches neighbor anywhere\n",
     "# // matches anywhere\n",
-    "for neigh in root.xpath(\".//neighbor\"):\n",
+    "for neigh in root.xpath(\"//neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "fa28db71",
    "metadata": {
     "tags": []
@@ -415,21 +415,23 @@
     {
      "data": {
       "text/plain": [
-       "['2008', '2011', '2011']"
+       "[<Element year at 0x107d152c0>,\n",
+       " <Element year at 0x107db5300>,\n",
+       " <Element year at 0x107db5340>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "root.xpath(\".//year/text()\")"
+    "root.xpath(\".//year\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "262657c3-8674-484b-bcc5-facb9316215b",
    "metadata": {
     "tags": []
@@ -441,7 +443,7 @@
        "['2008', '2011', '2011']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "954eb18f",
    "metadata": {
     "tags": []
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "c7d85ef8",
    "metadata": {
     "tags": []
@@ -532,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "2decc20f",
    "metadata": {
     "tags": []
@@ -554,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "f6e50605",
    "metadata": {
     "tags": []
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "54ed901b",
    "metadata": {
     "tags": []
@@ -593,7 +595,7 @@
     }
    ],
    "source": [
-    "for neigh in root.xpath(\".//neighbor\"):\n",
+    "for neigh in root.xpath(\"//neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "a4d0d522-c65f-4d03-87cd-30949bb34e83",
    "metadata": {
     "tags": []
@@ -639,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "id": "f8e326a5-b57b-4862-942a-3d39c5b2c8ec",
    "metadata": {
     "tags": []
@@ -651,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "id": "54b5cb6c-d032-445f-8f16-1563f56799c9",
    "metadata": {
     "tags": []
@@ -660,10 +662,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Element movie at 0x106feac00>, <Element movie at 0x106fdec00>]"
+       "[<Element movie at 0x107dbc280>, <Element movie at 0x107dbc2c0>]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "id": "43acd25a-8ddf-4515-89e1-f5adbb71529e",
    "metadata": {
     "tags": []
@@ -687,7 +689,7 @@
        "['Inception', 'The Dark Knight']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "id": "daefe60c",
    "metadata": {
     "tags": []
@@ -716,16 +718,16 @@
     {
      "data": {
       "text/plain": [
-       "[<Element movie at 0x106feac00>, <Element movie at 0x106fdec00>]"
+       "[<Element movie at 0x107dbc280>, <Element movie at 0x107dbc2c0>]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# movies with titles in english\n",
+    "# movies in english\n",
     "root.xpath('./movie[@lang=\"en\"]')"
    ]
   },
@@ -753,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "id": "44637f4c",
    "metadata": {
     "tags": []
@@ -773,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "c1a6b8a1",
    "metadata": {
     "tags": []
@@ -785,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "b7d1d453",
    "metadata": {
     "tags": []
@@ -794,10 +796,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Element nodename at 0x1102b1cc0>, <Element nodename at 0x1102b1c80>]"
+       "[<Element nodename at 0x107db7bc0>, <Element nodename at 0x107db7dc0>]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "2773708d",
    "metadata": {
     "tags": []
@@ -845,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "id": "47204a66-2d78-4a2e-934c-0c5566b18fe2",
    "metadata": {
     "tags": []
@@ -857,7 +859,7 @@
        "['John Doe', 'David Smith']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +869,7 @@
     "root = etree.fromstring(xmlstring)\n",
     "\n",
     "# Find authors who write books in English\n",
-    "root.xpath(\".//book[title/@lang='en']/author/text()\")"
+    "root.xpath(\"./book[title/@lang='en']/author/text()\")"
    ]
   },
   {
