--- a/notebooks/lecture_7_hashtable.ipynb
+++ b/notebooks/lecture_7_hashtable.ipynb
@@ -18,17 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "b559b610-596a-4245-b6d0-78c008df6dbf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[118102, 255532, 870526, 973450, 851073, 580421, 639326, 361602, 521434, 68380]"
+       "[592069,\n",
+       " 671394,\n",
+       " 567994,\n",
+       " 521483,\n",
+       " 418306,\n",
+       " 788929,\n",
+       " 971654,\n",
+       " 636872,\n",
+       " 356443,\n",
+       " 657534]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,9 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "89223a97-fa1a-4219-a8a3-8cca138153e3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def lsearch(A, x):\n",
@@ -56,16 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "id": "d9b6f450-0f0b-4bed-b945-c0ae9411e00b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 49.7 ms, sys: 1.56 ms, total: 51.3 ms\n",
-      "Wall time: 50.7 ms\n"
+      "CPU times: user 37.7 ms, sys: 3.53 ms, total: 41.2 ms\n",
+      "Wall time: 38.9 ms\n"
      ]
     },
     {
@@ -74,7 +89,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,16 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "693133da-0a95-415d-ba9f-ed7f2b9985da",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.79 s, sys: 3.98 ms, total: 1.79 s\n",
-      "Wall time: 1.79 s\n"
+      "CPU times: user 1.03 s, sys: 12.3 ms, total: 1.04 s\n",
+      "Wall time: 1.04 s\n"
      ]
     }
    ],
@@ -114,26 +131,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "id": "c49928e4-a6a6-4f24-a3b3-bf697e54cd16",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(118102, 2),\n",
-       " (255532, 2),\n",
-       " (870526, 6),\n",
-       " (973450, 0),\n",
-       " (851073, 3),\n",
-       " (580421, 1),\n",
-       " (639326, 6),\n",
-       " (361602, 2),\n",
-       " (521434, 4),\n",
-       " (68380, 0)]"
+       "[(592069, 9),\n",
+       " (671394, 4),\n",
+       " (567994, 4),\n",
+       " (521483, 3),\n",
+       " (418306, 6),\n",
+       " (788929, 9),\n",
+       " (971654, 4),\n",
+       " (636872, 2),\n",
+       " (356443, 3),\n",
+       " (657534, 4)]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,9 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "33ec7ec9-5f05-4a0e-93b8-34d8cf8c0ff3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "buckets = [[] for i in range(10)] # make sure each bucket is a separate list"
@@ -165,26 +186,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "6e1512a8-5917-4c79-bbb0-daa333fa92b2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[973450, 68380],\n",
-       " [580421],\n",
-       " [118102, 255532, 361602],\n",
-       " [851073],\n",
-       " [521434],\n",
+       "[[],\n",
        " [],\n",
-       " [870526, 639326],\n",
+       " [636872],\n",
+       " [521483, 356443],\n",
+       " [671394, 567994, 971654, 657534],\n",
+       " [],\n",
+       " [418306],\n",
        " [],\n",
        " [],\n",
-       " []]"
+       " [592069, 788929]]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,9 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "39599ec7-8800-4b04-b522-0920f76c8702",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def hash(x):\n",
@@ -215,9 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "id": "7a9694d7-b61d-4922-bd89-a39d2c3c2782",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def hsearch(buckets,x):\n",
@@ -230,16 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "id": "2856316e-2164-4d79-b89d-1122151b7a29",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.88 ms, sys: 190 µs, total: 8.07 ms\n",
-      "Wall time: 8.07 ms\n"
+      "CPU times: user 2.13 ms, sys: 134 µs, total: 2.27 ms\n",
+      "Wall time: 2.27 ms\n"
      ]
     },
     {
@@ -248,7 +277,7 @@
        "True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,21 +289,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "id": "5c774dff-7469-40e6-bd98-ac3e9db90b32",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 387 ms, sys: 4.52 ms, total: 391 ms\n",
-      "Wall time: 390 ms\n"
+      "CPU times: user 140 ms, sys: 4.55 ms, total: 145 ms\n",
+      "Wall time: 143 ms\n"
      ]
     }
    ],
    "source": [
     "%time for a in range(50): hsearch(buckets, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "d01d524b-e2d1-4938-9e9a-0e006d318833",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.03 s, sys: 14.2 ms, total: 1.04 s\n",
+      "Wall time: 1.04 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time for a in range(50): lsearch(A, a)"
    ]
   },
   {
@@ -287,9 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "e4bf19b0-006e-4c26-b66c-242f191af706",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cities = ['elgin', 'tyler', 'austin', 'hillsboro', 'greeley',\n",
@@ -300,9 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "fe84049e-7777-473b-9de5-aaf63bf89c51",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -319,7 +375,7 @@
        " ('garden grove', 6)]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,9 +390,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "49fb51f0-3c34-493d-81d9-1981a580da76",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def htable(A):\n",
@@ -348,9 +406,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "e906858c-8556-4bd0-a499-1d43c459365f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def hsearch(buckets,x):\n",
@@ -363,16 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "id": "b13af9ef-2be7-4a29-80dc-fdac33680875",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 µs, sys: 2 µs, total: 8 µs\n",
-      "Wall time: 11 µs\n"
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 5.96 µs\n"
      ]
     },
     {
@@ -381,7 +443,7 @@
        "True"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,16 +455,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "id": "9980b6d8-990a-4a74-ac1b-b0a04392397e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
-      "Wall time: 7.87 µs\n"
+      "CPU times: user 9 µs, sys: 1 µs, total: 10 µs\n",
+      "Wall time: 12.6 µs\n"
      ]
     },
     {
@@ -411,7 +475,7 @@
        "False"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,9 +494,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "id": "7b4c9720-d514-43f6-ab7d-6bd0d404d2ef",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def hash(s):\n",
@@ -449,9 +515,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "id": "bd230be0-e748-4da9-8bb7-42278dedb9da",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -468,7 +536,7 @@
        " ['clarksville', 'corona', 'cape coral']]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,9 +564,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "id": "9b172248-0072-47ad-b36a-c2748e346c05",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pop = [\n",
@@ -512,9 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "id": "19560eac-84e8-4189-9c5a-938bc682a651",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def llookup(A, x):\n",
@@ -526,9 +598,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "341e625a-9c48-4149-9999-27ece7935022",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -536,7 +610,7 @@
        "100513"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,9 +621,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "3ab5e272-993e-4d60-b722-743dbb1814bb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "llookup(pop, 'SF')"
@@ -565,9 +641,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "id": "bd9c0b04-b652-433f-9f3b-0cb76d6eaae2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def hash(s):\n",
@@ -583,9 +661,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "id": "4a324307-f144-4b4f-98f1-6e96f1aa5c93",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "buckets = htable_dict(pop, 5)"
@@ -593,9 +673,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "id": "2d3ae034-c1be-49f6-91fe-22f2abe08b62",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -607,7 +689,7 @@
        " [('Edinburg', 100243)]]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,9 +700,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "id": "3d9aeb7b-e4d8-492a-a9d5-ba2359c9fb8f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def hlookup(buckets, x, nbuckets):\n",
@@ -633,9 +717,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "id": "9dba468c-8fad-4eda-ab85-7f3f2fa91804",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "buckets = htable_dict(pop, 3)"
@@ -643,9 +729,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "id": "53effe30-8b0b-4387-96b1-ecb3d0128466",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -653,7 +741,7 @@
        "100513"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,9 +752,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "id": "d10c4aeb-063f-4f9a-ad34-452377a3f94f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "hlookup(buckets, 'SF', nbuckets=3)"
@@ -682,9 +772,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "id": "6c6b34eb-1801-46de-9684-514d53758914",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "buckets = htable_dict(pop, 1)"
@@ -692,9 +784,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "id": "3f2f885f-acc6-4210-895b-1a0a629719ca",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -706,7 +800,7 @@
        "  ('Houston', 2304580)]]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,15 +819,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "id": "57c72414-24bb-4272-8f37-62aae79123e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140421867690624\n"
+      "4665724256\n"
      ]
     }
    ],
@@ -745,9 +841,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "id": "e1b6ff47-ce19-4ce8-b147-570dba711ccf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -755,7 +853,7 @@
        "[('the', {1, 3, 5}), ('cat', {9}), ('sat', {4, 9})]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,15 +864,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "id": "9ce033e2-4069-44fd-b02d-4de14816b76b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140421867690624\n"
+      "4665724256\n"
      ]
     },
     {
@@ -783,7 +883,7 @@
        "{1, 3, 5}"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,9 +896,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "id": "01763b39-13a7-42da-8d33-2ebffb4e0e1e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "the.add(1000)"
@@ -806,17 +908,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "id": "3e8b2acb-7c27-4c73-a855-ad223acfa309",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "140421867690624"
+       "4665724256"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,17 +931,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "id": "f815649e-9258-4f3d-9434-7320f4970ff2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"[('the', {1000, 1, 3, 5}), ('cat', {9}), ('sat', {9, 4})]\""
+       "[('the', {1, 3, 5, 1000}), ('cat', {9}), ('sat', {4, 9})]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,15 +954,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 39,
    "id": "9b851a77-f49e-43a7-8b6d-95dc8ab7baab",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1000, 1, 3, 5} 140421867690624\n"
+      "{1000, 1, 3, 5} 4665724256\n"
      ]
     }
    ],
@@ -867,9 +975,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 40,
    "id": "60e9ddec-fc24-4436-b768-13d0fccff62e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -877,7 +987,7 @@
        "{'the': {1, 3, 5, 1000}, 'cat': {9}, 'sat': {4, 9}}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,9 +999,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "id": "212e572b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -899,7 +1011,7 @@
        "\"{'cat': 99, 'dog': 200}\""
       ]
      },
-     "execution_count": 85,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,14 +1020,6 @@
     "d = {\"cat\": 99, \"dog\": 200}\n",
     "str(d)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52556849",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -934,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
