--- a/notebooks/lab_3.ipynb
+++ b/notebooks/lab_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "2f53d5cc-5544-40c5-a657-ca64955da867",
    "metadata": {
     "tags": []
@@ -94,7 +94,7 @@
    "id": "79f32642-0bc6-4da6-a33c-b57c312ff4d1",
    "metadata": {},
    "source": [
-    "3. List the books titles of books with the folloing cahracteristics: <br>\n",
+    "3. List the books titles of books with the following cahracteristics: <br>\n",
     "(a) With price 19.95 <br>\n",
     "(b) With price < 20$ <br>\n",
     "(c) Author's first name is Jane <br>"
