--- a/notebooks/lecture_7_dict.ipynb
+++ b/notebooks/lecture_7_dict.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -41,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -117,13 +121,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could define `class`es to access the elements by name, such as `a.word` instead of `a[0]`, but that is overkill for a simple association of two pieces of data. (We could also use [data classes](https://docs.python.org/3/library/dataclasses.html) in Python 3.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Bag of words representation\n",
     "\n",
     "A document is a sequence of words that we can represent simply as a list of strings. For example, let's split apart a simple document into words:"
@@ -131,8 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -140,7 +139,7 @@
        "['the', 'cat', 'sat', 'on', 'the', 'hat', 'on', 'the', 'mat']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a list of words preserves the order, which is sometimes important, but often it is not.  When order is not important, we can use the [bag of words](https://en.wikipedia.org/wiki/Bag-of-words_model) representation of a document that records the words and their frequencies. This not only compresses the space needed to represent the document but it also tells us something about the meaning of the document.  For example,   examining the most common words is often useful for searching and machine learning problems. One representation for bag of words is just a list of associations (order of tuples doesn't matter):"
+    "One representation for bag of words is just a list of associations (order of tuples doesn't matter):"
    ]
   },
   {
@@ -190,15 +189,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
-    "\n",
-    "Write a loop that walks `bag` to find and print out the number of occurrences of `'on'`."
+    "Here is a loop that walks `bag` to find and print out the number of occurrences of `'the'`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -236,8 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -245,7 +246,7 @@
        "['the', 'cat', 'sat', 'on', 'the', 'hat', 'on', 'the', 'mat']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,8 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -291,8 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -300,7 +305,7 @@
        "[('the', 3), ('cat', 1), ('sat', 1), ('on', 2), ('hat', 1), ('mat', 1)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,8 +316,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -336,8 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -361,8 +370,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -370,7 +381,7 @@
        "{'a': 97, 'b': 98, 'c': 99, 'd': 100, 'e': 101}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +392,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -390,7 +403,7 @@
        "['A', 'B', 'C', 'D', 'E']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,8 +421,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -435,8 +450,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -444,7 +461,7 @@
        "{'the': 3, 'cat': 1, 'sat': 1, 'on': 2, 'hat': 1, 'mat': 1}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,15 +472,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "3\n",
-      "99\n",
+      "1\n",
       "99\n"
      ]
     }
@@ -484,8 +503,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "q = {'ronald':{3,4}, 'reagan':{19}}"
@@ -500,8 +521,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -509,7 +532,7 @@
        "{19}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,8 +544,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "s.add(77)\n",
@@ -546,22 +571,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(1, 2): 'parrt', (3, 99): 'mary'}\n",
-      "parrt\n"
+      "{(1, 2): 'joe', (3, 99): 'mary'}\n",
+      "joe\n"
      ]
     }
    ],
    "source": [
-    "td = {(1,2):'parrt', (3,99):'mary'}\n",
+    "td = {(1,2):'joe', (3,99):'mary'}\n",
     "print(td)\n",
     "print( td[(1,2)] ) # (1,2) is the key"
    ]
@@ -575,8 +601,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -593,22 +621,6 @@
     "if 'foo' in d:       # does not exist so we don't get an error on the next line    \n",
     "    print(d['foo'])  # does not execute"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pointer variables\n",
-    "\n",
-    "Even for the atomic elements like integers and floating-point numbers, variables in Python refer or *point* at the data element in memory. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -628,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.4"
   },
   "toc": {
    "colors": {
